--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -16,7 +16,7 @@
         <div class="container-fluid">
             <app-breadcrumbs></app-breadcrumbs>
 
-            <router-outlet></router-outlet>
+            <!-- <router-outlet></router-outlet> -->
 
 
 
@@ -24,6 +24,9 @@
             <!-- ============================================================== -->
             <!-- Start Page Content -->
             <!-- ============================================================== -->
+
+            <router-outlet></router-outlet>
+
             <!-- <div class="row">
                 <div class="col-12">
                     <div class="card">
